--- a/public/css/inbox.css
+++ b/public/css/inbox.css
@@ -5,7 +5,7 @@
 
     position: fixed;
     width: 600px;
-    max-height: 40%;
+    height: 40%;
     padding: 12px;
 
     z-index: 10;
@@ -40,6 +40,7 @@
     visibility: hidden;
 }
 
+.page-renderer .inbox-content,
 .headerIcon.inbox .inbox-content{
     display: flex;
     flex-direction: column;
@@ -49,6 +50,7 @@
     overflow-x: hidden;
 }
 
+.page-renderer .inbox-content .entry .actions button,
 .headerIcon.inbox .inbox-content .entry .actions button{
     background-color: hsl(from var(--main) h s calc(l * 4));
     border: 1px solid hsl(from var(--main) h s calc(l * 8));
@@ -65,6 +67,7 @@
     outline: none;
     user-select: none;
 }
+.page-renderer .inbox-content .entry .actions,
 .headerIcon.inbox .inbox-content .entry .actions{
     display: flex;
     flex-direction: column;
@@ -78,6 +81,7 @@
     border-left: 2px solid hsl(from var(--main) h s calc(l * 3));
 }
 
+.page-renderer .inbox-content .entry,
 .headerIcon.inbox .inbox-content .entry {
     display: flex;
     flex-direction: row;
@@ -87,12 +91,14 @@
     border-radius: 8px;
 }
 
+.page-renderer .inbox-content .entry  .content .headline,
 .headerIcon.inbox .inbox-content .entry  .content .headline{
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 6px;
 }
+.page-renderer .inbox-content .entry  .content .headline .avatar,
 .headerIcon.inbox .inbox-content .entry  .content .headline .avatar{
     width: 25px;
     height: 25px;
@@ -102,18 +108,21 @@
     background-position: center center;
     object-fit: cover;
 }
+.page-renderer .inbox-content .entry  .content .headline *,
 .headerIcon.inbox .inbox-content .entry  .content .headline *{
     margin: 6px 0;
     font-size: 14px;
     font-style: normal !important;
 }
 
+.page-renderer .inbox-content .entry .content,
 .headerIcon.inbox .inbox-content .entry .content{
     width: 100%;
     max-height: 68px;
     overflow: auto;
 }
 
+.page-renderer .inbox-content .entry .content p,
 .headerIcon.inbox .inbox-content .entry .content p{
     margin: 4px 0;
     line-height: 1.5;
@@ -123,4 +132,20 @@
 .headerIcon.inbox{
     position: relative;
     background-image: url('/img/mail.png');
+}
+
+
+/* reply */
+.page-renderer .inbox-content {
+    border-radius: 10px;
+    margin-bottom: 1rem;
+}
+
+.page-renderer .inbox-reply{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    flex-wrap: wrap;
+
+    padding: 12px;
 }
