--- a/public/css/messages.css
+++ b/public/css/messages.css
@@ -120,7 +120,8 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    overflow-y: auto;
+    overflow-y: hidden;
+    overflow-x: auto;
 }
 
 .message-container .content.mention {
